# robotpkg-wip

./: .gitignore  Makefile  README  TODO
BioMove3D/: DESCR  Makefile  PLIST  depend.mk  distinfo
MPC/: DESCR  Makefile  PLIST  depend.mk  distinfo
MPC_DEMTreatment-genom/: DESCR  Makefile  PLIST  depend.mk  distinfo
MPC_avoidObs-genom/: DESCR  Makefile  PLIST  depend.mk  distinfo
MPC_controller-genom/: DESCR  Makefile  PLIST  depend.mk  distinfo
MPC_planner-genom/: DESCR  Makefile  PLIST  depend.mk  distinfo
Move3D-Qt-Gui-libs/: DESCR  Makefile  PLIST  depend.mk  distinfo
Move3D-core/: DESCR  Makefile  PLIST  depend.mk  distinfo
Move3D-main/: DESCR  Makefile  PLIST  depend.mk  distinfo
Move3D-motionPlanner-libs/: DESCR  Makefile  PLIST  depend.mk  distinfo
antlr2/: DESCR  Makefile  PLIST  depend.mk  distinfo
assimp/: Makefile  PLIST  depend.mk  distinfo
atlaas/: Makefile  PLIST  depend.mk  distinfo
atlaas-genom/: DESCR  Makefile  PLIST  depend.mk  distinfo
attentional-genom/: DESCR  Makefile  PLIST  depend.mk  distinfo
blender/: Makefile  depend.mk
boost-python/: DESCR  Makefile  PLIST  depend.mk
can-utils/: DESCR  Makefile  PLIST  distinfo
catkin/: Makefile  PLIST  depend.mk  distinfo
certi/: DESCR  Makefile  PLIST  depend.mk  distinfo
chilitags/: DESCR  Makefile  PLIST  depend.mk  distinfo
clara/: DESCR  Makefile  PLIST  depend.mk  distinfo
coldman-genom/: DESCR  Makefile  PLIST  depend.mk  distinfo
coldman-libs/: Makefile  PLIST  depend.mk  distinfo
collada-dom/: DESCR  Makefile  PLIST  depend.mk
daqflex-libs/: Makefile  depend.mk  distinfo
demo-genom3/: Makefile  PLIST  distinfo
dialogs/: Makefile  depend.mk  distinfo
dynamic-graph-bridge/: DESCR  Makefile  PLIST  depend.mk  distinfo
dynamic-graph-bridge-msgs/: DESCR  Makefile  PLIST  depend.mk
eigen3/: Makefile  PLIST  depend.mk  distinfo
flann/: DESCR  Makefile  PLIST  depend.mk  distinfo
gdalwrap/: DESCR  Makefile  PLIST  depend.mk  distinfo
genRobPose-genom/: DESCR  Makefile  PLIST  depend.mk  distinfo
genom3/: Makefile  PLIST  PLIST.templates  depend.mk  distinfo  module.mk
genom3-openprs/: Makefile  depend.mk  distinfo
genom3-pocolibs/: Makefile  PLIST  depend.mk  distinfo
genom3-ros/: Makefile  PLIST  depend.mk  distinfo
genomix/: Makefile  depend.mk  distinfo
geometric-tools/: DESCR  Makefile  depend.mk  distinfo
gest-genom/: DESCR  Makefile  PLIST  depend.mk  distinfo
gladys/: DESCR  Makefile  PLIST  depend.mk  distinfo
glog/: DESCR  Makefile  PLIST  distinfo
gtsam/: DESCR  Makefile  PLIST  depend.mk  distinfo
gyro-libs/: Makefile  PLIST  depend.mk  distinfo
hatpconsole/: DESCR  Makefile  PLIST  depend.mk  distinfo
hatponboard-lib/: DESCR  Makefile  PLIST  depend.mk  distinfo
hatptester/: DESCR  Makefile  PLIST  depend.mk  distinfo
histodet/: DESCR  Makefile  PLIST  depend.mk  distinfo
hpp/: Makefile  Makefile.common
hpp-corbaserver/: Makefile  depend.mk  distinfo
hpp-core/: Makefile  depend.mk
hpp-doc/: Makefile  PLIST  distinfo
hpp-geometry/: DESCR  Makefile  PLIST  depend.mk  distinfo
hpp-gik/: Makefile  PLIST  depend.mk  distinfo
hpp-hik/: Makefile  PLIST  depend.mk  distinfo
hpp-kwsio/: Makefile  depend.mk
hpp-kwsplus/: Makefile  depend.mk
hpp-localstepper/: Makefile  PLIST  depend.mk  distinfo
hpp-model/: Makefile  depend.mk
hpp-openhrp/: Makefile  depend.mk  distinfo
hpp-template-corba/: Makefile
hpp-util/: Makefile  PLIST  depend.mk  distinfo
hpp-walkfootplanner/: Makefile  PLIST  depend.mk
hpp-walkplanner/: Makefile  PLIST  depend.mk  distinfo
hri-simulation/: DESCR  Makefile  PLIST  distinfo
hrp2-14/: Makefile  distinfo
hrp2-14-description/: DESCR  Makefile  PLIST  depend.mk  distinfo
hrp2-builder/: Makefile  depend.mk  distinfo
hrp2-computer-monitor/: Makefile  PLIST  depend.mk  distinfo
hrp2-dynamics/: Makefile  PLIST  depend.mk  distinfo
hrp2-machine/: Makefile  PLIST  depend.mk  distinfo
hyper/: DESCR  Makefile  PLIST  depend.mk  distinfo
hyper-genom-plugin/: DESCR  Makefile  PLIST  depend.mk  distinfo
hyper-viewer/: DESCR  Makefile  PLIST  depend.mk  distinfo
hyper_genom/: Makefile  depend.mk  distinfo
icu-genom/: DESCR  Makefile  PLIST  depend.mk  distinfo
jafar-correl/: DESCR  Makefile  PLIST  depend.mk  distinfo
jafar-gdhe/: Makefile  depend.mk  distinfo
jafar-image/: DESCR  Makefile  PLIST  depend.mk  distinfo
jafar-jmath/: DESCR  Makefile  PLIST  depend.mk
jafar-kernel/: DESCR  Makefile  PLIST  depend.mk  distinfo
jafar-lgl/: DESCR  Makefile  PLIST  depend.mk  distinfo
jafar-qdisplay/: DESCR  Makefile  PLIST  depend.mk  distinfo
jafar-rednav/: DESCR  Makefile  PLIST  depend.mk  distinfo
jafar-rtslam/: DESCR  Makefile  PLIST  depend.mk  distinfo
jido-pick-object/: DESCR  Makefile
jido-pickObject/: DESCR  Makefile
jointStateMapper/: DESCR  Makefile  PLIST  depend.mk  distinfo
joystick-genom/: DESCR  Makefile  PLIST  depend.mk  distinfo
jrl-dynamics/: Makefile  PLIST  depend.mk  distinfo
jrl-dynamics-urdf/: Makefile  PLIST  depend.mk  distinfo
jrl-interface-dynamics/: Makefile  PLIST  depend.mk
jrl-interface-giktask/: Makefile  depend.mk
jrl-mal/: Makefile  PLIST  depend.mk  distinfo
jrl-mathtools/: depend.mk
jrl-walkgen/: Makefile  PLIST  depend.mk  distinfo
jsbsim/: DESCR  Makefile  PLIST  depend.mk
jsoncpp/: Makefile  depend.mk
kineo-pp/: depend.mk
kpp-interface/: Makefile  depend.mk
kpp-interfacewalk/: Makefile  depend.mk  distinfo
kukaFri-libs/: Makefile  PLIST  depend.mk  distinfo
laas-rackham/: DESCR  Makefile
laaswm-gui/: DESCR  Makefile  distinfo
lastwave/: DESCR  Makefile  PLIST  depend.mk  distinfo
lastwave/files/: CMakeLists.txt  lastwave.pc.cmake
libANN/: DESCR  Makefile  PLIST  PLIST.guess  depend.mk  distinfo
libfreenect/: DESCR  Makefile  PLIST  depend.mk  distinfo
libhatp/: DESCR  Makefile  PLIST  (+2 more)
libply-vcg/files/: CMakeLists.txt
mumps/files/: Makefile.am  configure.ac
py-jsbsim/files/: CMakeLists.txt
vcg-libply/files/: CMakeLists.txt
vcglib/files/: CMakeLists.txt
(+601 files in other folders)
